# jac

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  PARALLEL-PLAN-v2.md  PLAN.md  README.md  REMAINING.md  SPEC-COMPLIANCE.md  SPEC.md  SUPPORT-WRAPPERS-PLAN.md  config.toml.example  conformance_report.md  debug_block.rs  rust-toolchain.toml
.github/: ci-config.yml
.github/workflows/: ci-enhanced.yml  ci.yml
docs/: benchmark_results.md  compliance_matrix.csv
docs/security/: compliance_generator.md  regression_scenarios.md  threat_modeling.md
docs/testing/: fixture_provenance.md  phase9_validation_suite.md  test_data_strategy.md
jac-cli/: Cargo.toml
jac-cli/src/: main.rs
jac-cli/tests/: cli.rs  wrapper_array_headers.rs  wrapper_map.rs  wrapper_pointer.rs  wrapper_sections.rs
jac-cli/tests/missing/: mod.rs
jac-codec/: Cargo.toml
jac-codec/benches/: encoding.rs
jac-codec/fuzz/: .gitignore  Cargo.toml  manage_corpus.sh  run_fuzz.sh
jac-codec/fuzz/fuzz_targets/: fuzz_bitpack.rs  fuzz_compression.rs  fuzz_decode_block.rs  fuzz_projection.rs  fuzz_security.rs  fuzz_varint.rs
jac-codec/src/: block_builder.rs  block_decode.rs  column.rs  lib.rs  segment.rs  segment_decode.rs
jac-codec/tests/: conformance.rs  cross_platform_compatibility.rs  security_property_tests.proptest-regressions  security_property_tests.rs
jac-format/: Cargo.toml
jac-format/src/: bitpack.rs  block.rs  checksum.rs  constants.rs  decimal.rs  error.rs  footer.rs  header.rs  lib.rs  limits.rs  types.rs  varint.rs
jac-format/tests/: property_tests.rs
jac-io/: Cargo.toml
jac-io/benches/: compression.rs  decode.rs  early_flush.rs
jac-io/src/: lib.rs  parallel.rs  reader.rs  runtime.rs  writer.rs
jac-io/src/wrapper/: array_headers.rs  error.rs  map.rs  mod.rs  plugin.rs  pointer.rs  sections.rs  utils.rs
jac-io/tests/: concurrency_stress.rs  error_cases.rs  error_matrix.rs  integration_tests.rs  parallel_validation.rs
jac-test-utils/: Cargo.toml
jac-test-utils/src/: debug_tools.rs  lib.rs  profiler.rs  test_categories.rs  test_config.rs  test_debugger.rs  visualization.rs
reports/ci/: ci_report_20251003_212317.html
reports/fixture_provenance/: provenance_audit_20251003_212041.txt  provenance_report_20251003_212039.html
reports/security/: security_compliance_report_20251003_210448.md  security_compliance_report_20251003_210503.md
scripts/: generate_provenance.py  generate_security_report.sh  generate_test_data.py  manage_ci.sh  manage_fixture_provenance.sh  manage_test_data.sh  run_tests.sh  security_fuzz.sh  test_debug_tool.sh  validate_provenance.py
security_fuzz_output/reports/: security_report.html
test_debug_output/reports/: comprehensive_report.html  debug_summary.md  performance_report.html  test_categorization.md
testdata/: 3.json.zst  json_array_nested_repro.json  large.json.zst  small.json.zst
testdata/spec/: v12_1.jsonl
xtask/: Cargo.toml
xtask/src/: main.rs
