[package]
name = "jac-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "JAC I/O - Streaming file I/O, high-level APIs for compression/decompression"

[features]
default = []
async = ["dep:tokio"]

[dependencies]
jac-format = { path = "../jac-format" }
jac-codec = { path = "../jac-codec" }
serde.workspace = true
serde_json.workspace = true
simd-json.workspace = true
zstd.workspace = true
rayon.workspace = true
bytes.workspace = true
thiserror.workspace = true
tokio = { version = "1.37", optional = true, features = ["rt", "rt-multi-thread", "macros"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sysinfo = "0.30"

[dev-dependencies]
proptest.workspace = true
jac-test-utils = { path = "../jac-test-utils" }
tempfile = "3.8"
criterion.workspace = true

[[bench]]
name = "compression"
harness = false

[[bench]]
name = "early_flush"
harness = false

[[bench]]
name = "decode"
harness = false
