[package]
name = "jac-test-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde_json.workspace = true
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
num_cpus = "1.0"
