[package]
name = "jac-codec-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
jac-codec = { path = ".." }
jac-format = { path = "../jac-format" }

[[bin]]
name = "fuzz_decode_block"
path = "fuzz_targets/fuzz_decode_block.rs"
test = false
doc = false

[[bin]]
name = "fuzz_varint"
path = "fuzz_targets/fuzz_varint.rs"
test = false
doc = false
