[package]
name = "jac-codec-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
jac-codec = { path = ".." }
jac-format = { path = "../jac-format" }
serde_json = "1.0"

[[bin]]
name = "fuzz_decode_block"
path = "fuzz_targets/fuzz_decode_block.rs"
test = false
doc = false

[[bin]]
name = "fuzz_varint"
path = "fuzz_targets/fuzz_varint.rs"
test = false
doc = false

[[bin]]
name = "fuzz_projection"
path = "fuzz_targets/fuzz_projection.rs"
test = false
doc = false

[[bin]]
name = "fuzz_compression"
path = "fuzz_targets/fuzz_compression.rs"
test = false
doc = false

[[bin]]
name = "fuzz_bitpack"
path = "fuzz_targets/fuzz_bitpack.rs"
test = false
doc = false
